syntax = "proto3";
package tinyfs;

option java_package = "com.tinyfs.auth";
option java_outer_classname = "ClientCredentialsProto";

message ClientCredentials {
  string username = 1;
}
